public/styles.css
/* ... */
@media screen and (min-width: 1200px) {
    .search {
        grid-template-rows: auto;
        grid-template-columns: auto;
    }
}

.toolbar > .title {
    flex: 1;
}

.hideInput {
    display: none;
}

fieldset div:last-of-type:has(.hideInput) {

}

.search-field {
    display: flex;
    flex-direction: column;
}


.search-input {
    border: 2px solid;
    border-radius: 100vmax;
    padding: .5rem 0 .5rem 1rem;
    height: 60px;
    min-height: 60px;
}

@media screen and (min-width: 600px) {
    .search-input {
        height: 80px;
        min-height: 80px;
    }

}

.button-container {
    display: flex;
    padding-top: .5rem;
}

.add-container {
    position: absolute;
    right: 0;
    bottom: 5vh;
    backdrop-filter: blur(2px);
    border-radius: 100vmax 0 0 100vmax;
    background-color: hsla(132, 100%, 40%, 0.4);
    padding: .5rem;
}

@media (prefers-color-scheme: light) {
    .add-container {
        background-color: rgba(0, 100, 20, 0.2);
    }
}


button,
input[type="submit"] {
    display: flex;
    justify-content: space-around;
    align-items: center;
    transition: 0.3s;
    cursor: pointer;
    margin: auto .5rem auto 0;
    border: 2px solid black;
    border-radius: 100vmax;
    padding: .5rem 1rem;
    font-weight: 800;
    font-size: 1rem;
}

button:hover {
    background-color: #D8D8D8;
}

button>i {
    margin-left: .5rem !important;
}

.add-button {
    position: sticky;
    z-index: 999;
    transition: all 0.3s;
    box-shadow: 0 0 15px 2.5px #00f99d;
    background-color: #00f99d;
    max-width: 300px;
    color: black;
}

dialog .add-button {
    position: unset;
    margin-top: 1rem;
    box-shadow: none;
}

.add-button:hover {
    box-shadow: 0 0 25px 7.5px #beff0d;
    background-color: #beff0d;
}

#searchButton {
    right: 0;
    align-self: flex-end;
    transition: 0.3s;
    margin: 10px;
    margin-top: -50px;
    border: 4px solid;
    background-color: #7241ff;
    width: 80px;
    height: 40px;
    color: white;
}

@media (prefers-color-scheme: light) {
    #searchButton {
        outline: 2px solid black;
    }
}

#searchButton:hover {
    background-color: #4422ca;
}

@media screen and (min-width: 600px) {
    #searchButton, .add-button {
        width: clamp(200px, 20vw, 300px);
    }
    #searchButton {
        margin-top: -70px;
        height: 60px;
    }
}

.search-label {
    display: none;
}

@media screen and (min-width: 600px) {
    .search-label {
        display: block;
    }
}

.gg-search {
    margin: 0 !important;
    margin-bottom: 5px !important;
}

@media screen and (min-width: 600px) {
    .gg-search {
        transform: scale(var(--ggs,1.5)) !important;
    }
    .gg-add {
        transform: scale(var(--ggs,1.5)) !important;
    }
}

.gg-trash {
    transform: scale(var(--ggs,1.5)) !important;
    margin: 0.25rem !important;
}

.filter-container {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    gap: clamp(.25rem, .5rem, .75rem);
    border-radius: 40px;
    background-color: rgb(59, 59, 59);
    padding: 0 1rem;
    padding-inline-start: 0;
    height: 60px;
    list-style: none;
}
.filter-container > li {
    font-size: clamp(.25rem, 1rem, 20px);
    line-height: initial;
}

table {
    display: none;
    flex-direction: column;
    margin-top: 1rem;
    width: auto;
    overflow: inherit;
}

table>* {
    width: 100%;
}

table * {
    border-collapse: collapse;
}

thead {
/*     position: sticky;
    top: 0;
    z-index: 999; */
    background-color: field;
}

thead th {
    grid-column-end: span 2;
    justify-self: flex-end;
    padding-right: .5rem;
    font-size: .75rem;
}

tr {
    display: grid;
    grid-auto-flow: dense;
    border: 2px solid;
    border-bottom: none;
}

@media screen and (min-width: 600px) {
    tr {
        grid-template-columns: 1fr 1fr;
        grid-auto-flow: column;
    }
}

tbody tr:last-of-type {
    border-bottom: 2px solid;
}

p {
    line-height: 1;
    letter-spacing: -.1ch;
}

.container {
    container-type: inline-size;
}

.card {
    background: lightblue;
}

@container (min-inline-size: 500px) {
  .card {
    background: lightgreen;
  }
}

.row {
    transition: all 0.1s ease-in-out;
}

.row:last-of-type {
    padding-bottom: .5rem;
}

.row > td {
    display: grid;
    position: relative;
    gap: 1rem;
    border: 0;
    padding: .5rem .5rem .75rem .5rem;
}

.row a {
    display: flex;
    transition: background-size 400ms;
    background:
    linear-gradient(
        to right,
        rgba(100, 200, 200, 1),
        rgba(100, 200, 200, 1)
    ),
    linear-gradient(
        to right,
        rgba(255, 0, 0, 1),
        rgba(255, 0, 180, 1),
        rgba(0, 100, 200, 1)
    );
    background-position: 100% 100%, 0 100%;
    background-size: 100% 3px, 0 3px;
    background-repeat: no-repeat;
    /* max-width: 20ch; */
    overflow: hidden;
    color: inherit;
    font-weight: 700;
    text-decoration: none;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.row a:hover {
    background-size: 0 3px, 100% 3px;
}

.img-container {
    display: flex;
    position: relative;
    align-items: center;
    outline: 2px solid white;
    border: 2px solid black;
    border-radius: 50%;
    background-color: rgb(239, 239, 239);
    width: 100px;
    height: 100px;
    overflow: hidden;
}

.img-container img {
    width: auto;
    height: 200px;
}

@media screen and (min-width: 600px) {
    .img-container {
        width: 150px;
        height: 150px;
    }
    .img-container img {
        display: inline-block;
        position: relative;
        border-radius: 50%;
        width: auto;
        height: 300px;
        overflow: hidden;
        object-fit: cover;
    }
}

.img-circle {
    clip-path: circle(30%);
}

.category-container {
    display: flex;
    height: fit-content;
}

.modal {
    margin: 0;
    width: 100vw;
    max-width: max(75vw, 600px);
}
/* ... */

